# zed-update-versions-lsp

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md  SPEC_TECHNICAL.md  TODO.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-lsp.yml  release-plz.yml
examples/: Cargo.toml  Gemfile  composer.json  deno.json  package.json  pyproject.toml  requirements.txt
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
lsp-server/: Cargo.toml
lsp-server/src/: backend.rs  cache.rs  config.rs  main.rs  semver_utils.rs
lsp-server/src/providers/: cargo.rs  composer.rs  deno.rs  mod.rs  npm.rs  pypi.rs  rubygems.rs
lsp-server/src/version_utils/: mod.rs
lsp-server/src/version_utils/normalize/: deno.rs  mod.rs  python.rs  ruby.rs
