# Example pyproject.toml for testing update-versions inlay hints
# Demonstrates both PEP 621 ([project].dependencies) and
# Poetry ([tool.poetry.dependencies]) formats.

# ── PEP 621 ────────────────────────────────────────────────────────────────

[project]
name = "my-app"
version = "0.1.0"
description = "Example pyproject.toml using PEP 621 metadata"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "flask>=2.0.0",
    "httpx~=0.24.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.1.0",
    "mypy>=1.0.0",
]

# ── Poetry (alternative — uncomment to use instead of [project]) ───────────
#
# [tool.poetry]
# name = "my-app"
# version = "0.1.0"
#
# [tool.poetry.dependencies]
# python = "^3.9"
# requests = "^2.28.0"
# flask = "^2.0.0"
# httpx = "^0.24.0"
# click = "^8.1.0"
# pydantic = "^2.0.0"
# rich = "^13.0.0"
#
# [tool.poetry.group.dev.dependencies]
# pytest = "^7.3.0"
# black = "^23.1.0"
# mypy = "^1.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
