[package]
name = "update-versions"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Inline version hints for package manifest files in Zed."
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
