[package]
name = "update-versions-lsp"
version.workspace = true
edition = "2021"
license.workspace = true
description = "LSP server for the update-versions-lsp extension."
repository.workspace = true
authors.workspace = true

[[bin]]
name = "update-versions-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "1.1"
reqwest = { version = "0.13", features = ["json", "gzip"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
